# TabGrabber

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_gui.pyw
tabgrabber/: __init__.py  __main__.py  audio_to_midi.py  cli.py  lyrics.py  midi_to_tab.py  pipeline.py  song_analysis.py  stems.py  utils.py
tabgrabber/gui/: __init__.py  __main__.py  gui_main.py  launch_gui.py  midi_player.py  theme.py
tabgrabber/tab_formats/: __init__.py  ascii_tab.py  guitar_pro.py  musicxml.py  sloppak.py
tests/: test_audio_to_midi.py  test_cli.py  test_midi_to_tab.py  test_stems.py
